--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <script type="text/javascript">
-    alert(parent.locationManagerData.address.freeAddress);
+    alert(parent.window.locationManagerData.address.freeAddress);
 </script>
 <button>Came Back to Vivo Next</button>
 <script type="text/javascript">
