--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <script type="text/javascript">
     alert(parent.window.locationManagerData.address.freeAddress);
 </script>
+	<h1>Simple test</h1>
 <button>Came Back to Vivo Next</button>
 <script type="text/javascript">
 	document.querySelector('button').onclick = function () {
