--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             var addressSelected = {
               "action": "addressSelected",
               "address": {
-                "postcode": "88015-620",
-                "stateOrProvince": "SC",
-                "city": "Florianópolis",
+                "postcode": "80000-000",
+                "stateOrProvince": "PR",
+                "city": "Curitiba",
                 "locality": "Centro",
                 "streetNr": "213",
                 "streetType": "",
@@ -47,15 +47,15 @@
                 "complements": [
                   {
                     "type": "ED",
-                    "value": "Corporate Jardim Botânico"
+                    "value": "BLBLLAA"
                   },
                   {
                     "type": "CD",
-                    "value": "CJB"
+                    "value": "BLA"
                   },
                   {
                     "type": "AN",
-                    "value": "6"
+                    "value": "1"
                   }
                 ],
                 "networkOwner": "",
