--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </script>
     </head>
     <body>
-            <h1>Teste</h1>
+            <h1>Location Management</h1>
             <button onclick="sendMessage(JSON.stringify(addressSelected));false;">OK</button>
     </body>
 </html>
